# vlc

./: config.h  files.txt  meson.build  meson_options.txt
compat/: meson.build
doc/: meson.build
include/: gen_vlc_about.sh  meson.build  revision.h  revision.h.in
include/vlc/: meson.build
lib/: core.c  libvlc.map  meson.build
modules/: meson.build
modules/access/: meson.build
modules/access_output/: meson.build
modules/arm_neon/: meson.build
share/: meson.build
share/icons/: meson.build
share/lua/: meson.build
share/lua/extensions/: meson.build
share/lua/intf/: meson.build
share/lua/intf/modules/: meson.build
share/lua/meta/: meson.build
share/lua/meta/art/: meson.build
share/lua/meta/fetcher/: meson.build
share/lua/meta/reader/: meson.build
share/lua/modules/: meson.build
share/lua/playlist/: meson.build
share/lua/sd/: meson.build
src/: libvlccore.map  meson.build  revision.c.in
src/android/: meson.build
src/audio_output/: meson.build
src/config/: meson.build
src/darwin/: meson.build
src/extras/: meson.build
src/input/: meson.build
src/interface/: meson.build
src/linux/: meson.build
src/misc/: meson.build
src/modules/: bank.c  meson.build
src/network/: meson.build
src/os2/: meson.build
src/playlist/: meson.build
src/posix/: meson.build
src/stream_output/: meson.build
src/test/: headers.c.in  meson.build
src/text/: meson.build
src/video_output/: meson.build
src/win32/: meson.build
