subdir('vlc')

vlc_about_h = configure_file(
  output: 'vlc_about.h',
  command: [
    find_program('bash'),
    join_paths(meson.current_source_dir(), 'gen_vlc_about.sh'),
    meson.source_root(),
  ],
  capture: true,
)

vlc_plugins_headers = [
  'vlc_access.h',
  'vlc_actions.h',
  'vlc_addons.h',
  'vlc_aout_volume.h',
  'vlc_aout.h',
  'vlc_arrays.h',
  'vlc_atomic.h',
  'vlc_avcodec.h',
  'vlc_bits.h',
  'vlc_block_helper.h',
  'vlc_block.h',
  'vlc_boxes.h',
  'vlc_charset.h',
  'vlc_codec.h',
  'vlc_common.h',
  'vlc_config_cat.h',
  'vlc_config.h',
  'vlc_configuration.h',
  'vlc_cpu.h',
  'vlc_demux.h',
  'vlc_dialog.h',
  'vlc_epg.h',
  'vlc_es_out.h',
  'vlc_es.h',
  'vlc_events.h',
  'vlc_filter.h',
  'vlc_fingerprinter.h',
  'vlc_fourcc.h',
  'vlc_fs.h',
  'vlc_gcrypt.h',
  'vlc_http.h',
  'vlc_httpd.h',
  'vlc_image.h',
  'vlc_inhibit.h',
  'vlc_input_item.h',
  'vlc_input.h',
  'vlc_interface.h',
  'vlc_interrupt.h',
  'vlc_keystore.h',
  'vlc_md5.h',
  'vlc_media_library.h',
  'vlc_memstream.h',
  'vlc_messages.h',
  'vlc_meta_fetcher.h',
  'vlc_meta.h',
  'vlc_mime.h',
  'vlc_modules.h',
  'vlc_mouse.h',
  'vlc_mtime.h',
  'vlc_network.h',
  'vlc_objects.h',
  'vlc_opengl.h',
  'vlc_picture_fifo.h',
  'vlc_picture_pool.h',
  'vlc_picture.h',
  'vlc_playlist.h',
  'vlc_plugin.h',
  'vlc_probe.h',
  'vlc_rand.h',
  'vlc_renderer_discovery.h',
  'vlc_services_discovery.h',
  'vlc_sout.h',
  'vlc_spu.h',
  'vlc_stream_extractor.h',
  'vlc_stream.h',
  'vlc_strings.h',
  'vlc_subpicture.h',
  'vlc_text_style.h',
  'vlc_threads.h',
  'vlc_timestamp_helper.h',
  'vlc_tls.h',
  'vlc_url.h',
  'vlc_variables.h',
  'vlc_video_splitter.h',
  'vlc_viewpoint.h',
  'vlc_vlm.h',
  'vlc_vout_display.h',
  'vlc_vout_osd.h',
  'vlc_vout_window.h',
  'vlc_vout.h',
  'vlc_xlib.h',
  'vlc_xml.h',
  # 'vlc_main.h',
  vlc_about_h,
]

install_headers(vlc_plugins_headers,
  subdir: 'vlc/plugins',
)
